--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,5 +38,30 @@
   "card_assignment": "card assignment",
   "athlete_name": "athlete name",
   "select": "select",
-  "see_them_all": "see them all"
+  "see_them_all": "see them all",
+  "create_card": "create card",
+  "enter_title": "Enter title",
+  "duration": "duration",
+  "in_weeks": "in weeks",
+  "date": "date",
+  "select_date": "select date",
+  "save": "save",
+  "performance_history": "performance history",
+  "anamnesis": "anamnesis",
+  "see_exercises": "see exercises",
+  "from": "from",
+  "to": "to",
+  "done":"done",
+  "change": "change",
+  "do_not_change": "don't change",
+  "enter_tab_name": "Enter tab name",
+  "exercise": "exercise",
+  "recovery": "recovery",
+  "duplicate_series": "duplicate series",
+  "end_of_the_year": "end of the year",
+  "do you want to eliminate the exercise?":"do you want to eliminate the exercise?",
+  "the exercise has been eliminated": "the exercise has been eliminated",
+  "do you want to duplicate the series?": "do you want to duplicate the series?",
+  "the series was duplicated": "the series was duplicated",
+  "added": "added"
 }
