--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -38,6 +38,31 @@
     "card_assignment": "assegnazione scheda",
     "athlete_name" : "nome atleta",
     "select":"seleziona",
-    "see_them_all": "vedi tutti"
+    "see_them_all": "vedi tutti",
+    "create_card": "crea scheda",
+    "enter_title": "Inserisci titolo",
+    "duration": "durata",
+    "in_weeks": "in settimane",
+    "date": "data",
+    "select_date": "seleziona data",
+    "save": "salva",
+    "performance_history": "storico prestazione",
+    "anamnesis": "anamnesi",
+    "see_exercises": "vedi esercizi",
+    "from": "dal",
+    "to": "al",
+    "done": "fatto",
+    "change": "modificare",
+    "do_not_change": "non cambiare",
+    "enter_tab_name": "Nome della scheda",
+    "exercise": "esercizio",
+    "recovery": "recupero",
+    "duplicate_series": "duplica serie",
+    "end_of_the_year": "fine esercizio",
+    "do you want to eliminate the exercise?": "vuoi eliminare l’esercizio?",
+    "the exercise has been eliminated": "l’esercizio è stato eliminato",
+    "do you want to duplicate the series?": "vuoi duplicare la serie?",
+    "the series was duplicated": "la serie è stata duplicata",
+    "added": "aggiunto"
 
 }
